--- a/src/chat/templates/chat/thread.html
+++ b/src/chat/templates/chat/thread.html
@@ -11,6 +11,7 @@
 </ul>
 
 <form id='form' method='POST'> {% csrf_token %}
+    <input type="hidden" id="myUsername" value="{{ user }}"/>
 {{form.as_p }}
 <input type='submit' class='btn btn-primary'/>
 </form>
@@ -22,5 +23,43 @@
 <script>
 // websocket scripts
 
+var loc = window.location
+var formData = $("#form")
+var msgInput = $("#id_message")
+var chatHolder = $("#chat-items")
+var me = $("#myUsername")
+
+var wsStart = 'ws://'
+if (loc.protocol == 'https:'){
+    wsStart = 'wss://'
+}
+var endpoint = wsStart+loc.host + loc.pathname
+var socket = new WebSocket(endpoint)
+
+socket.onmessage = function(e){
+    console.log("message",e)
+    var chatDataMsg = JSON.parse(e.data)
+    chatHolder.append("<li>" +chatDataMsg.msg+ " via "+ chatDataMsg.username+"</li>")
+}
+socket.onopen = function(e){
+    console.log("open",e)
+    formData.submit(function(event){
+        event.preventDefault()
+        var msgText = msgInput.val()
+        chatHolder.append("<li>" +msgText+" via "+me+"</li>")
+
+        var finalData = {
+            'message':msgText
+        }
+        socket.send(JSON.stringify(finalData))
+        formData[0].reset()
+    })
+}
+socket.onerror = function(e){
+    console.log("error",e)
+}
+socket.onclose = function(e){
+    console.log("close",e)
+}
 </script>
 {% endblock %}
